<resources>
    <string name="app_name">CryptoSentinel</string>
    <string name="encryption_text">Metin Şifreleme</string>
    <string name="decoding_button">Şifre Çözme</string>
    <string name="encrypt_button">Şifrele</string>
    <string name="enterPassword_editText">Şifre</string>
    <string name="textToBeEncrypted_editText">Şifrelenecek Metin</string>
    <string name="decryptPassword_button">Şifre Çöz</string>
    <string name="encryptedText_editText">Şifreli Metni Girin</string>
    <string name="DecryptedText_text">Şifresi Çözülmüş Metin:</string>
    <string name="encryptedText_text">Şifrelenmiş Metin:</string>
    <string name="password_text2">Şifre</string>
    <string name="share_button">Paylaş</string>
    <string name="theme_text">Uygulama Teması</string>
    <string name="choose_theme_text">Uygulama temasını seçiniz.</string>
    <string name="light_text">Açık</string>
    <string name="dark_text">Koyu</string>
    <string name="system_theme_text">Sistem Teması</string>
    <string name="updated_text">Uygulama Güncel.</string>
    <string name="error_text">Hata!</string>
    <string name="decrypted_text">Şifreli Metin Çözüldü!</string>
    <string name="try_again_text">Hatalı Giriş! Lütfen Tekrar Deneyin!</string>
    <string name="compulsory_text">Zorunlu!</string>
    <string name="enter_password_text">Lütfen Şifre Girin!</string>
    <string name="share_text">Paylaş</string>
    <string name="share_message_text">Paylaşmak istediğiniz yöntemi seçiniz.</string>
    <string name="only_text">Sadece Metin</string>
    <string name="only_password_text">Sadece Şifre</string>
    <string name="text_and_password_text">Metin ve Şifre</string>
    <string name="password_text">Şifre: </string>
    <string name="ciphertext">Şifreli Metin: </string>
    <string name="text_encrypted_text">Metin Şifrelendi!</string>
    <string name="decryptedText_text">Şifresi Çözülmüş Metin: </string>
    <string name="developer_text">Geliştirici</string>
    <string name="review_text">Derecelendir</string>
</resources>