<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
    tools:context=".EncryptionActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/encryptionToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="90dp"
        app:layout_constraintBottom_toTopOf="@+id/encryption_adView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textToBeEncrypted_editTextLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="50dp"
                android:hint="@string/textToBeEncrypted_editText"
                android:importantForAutofill="no"
                app:boxBackgroundColor="@color/edittext_color"
                app:boxStrokeColor="@color/purple_700"
                app:endIconMode="clear_text"
                app:hintTextColor="@color/purple_700"
                tools:ignore="TextContrastCheck">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textToBeEncrypted_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:scrollbars="vertical"
                    android:textColor="?android:attr/textColorPrimary"
                    tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_editTextLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="50dp"
                android:hint="@string/password_text2"
                android:importantForAutofill="no"
                app:boxBackgroundColor="@color/edittext_color"
                app:boxStrokeColor="@color/purple_700"
                app:endIconMode="password_toggle"
                app:hintTextColor="@color/purple_700">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password_editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="?android:attr/textColorPrimary"
                    tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck,VisualLintTextFieldSize" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/encrypt_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="70dp"
                android:backgroundTint="@color/purple_700"
                android:text="@string/encrypt_button"
                android:textColor="@color/white"
                tools:ignore="TextContrastCheck,VisualLintButtonSize" />

            <TextView
                android:id="@+id/decryptedText_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="30dp"
                android:longClickable="true"
                android:text="@string/encryptedText_text"
                android:textIsSelectable="true"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/encryptedText_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:longClickable="true"
                android:textAlignment="center"
                android:textIsSelectable="true"
                android:textSize="18sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/password_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:longClickable="true"
                android:text="@string/password_text2"
                android:textIsSelectable="true"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/password_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="30dp"
                android:longClickable="true"
                android:textAlignment="center"
                android:textIsSelectable="true"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/share_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="50dp"
                android:backgroundTint="@color/purple_700"
                android:text="@string/share_button"
                android:textColor="@color/white"
                tools:ignore="TextContrastCheck,VisualLintButtonSize" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/encryption_adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-5963947262278027/1072179297"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>